--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,6 +10,7 @@
 <body>
     <div class="main-content">
         {{>header}}
+        <p>this was created by mohsin</p>
         <img src="/img/image.jpg" alt="" srcset="">
     </div>
     
